// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Suggest Empty input 1`] = `
Array [
  Object {
    "id": 30,
    "rating": undefined,
    "title": "-BAZZZ-",
  },
  Object {
    "id": 20,
    "rating": undefined,
    "title": "Foo bar",
  },
  Object {
    "id": 10,
    "rating": undefined,
    "title": "Hello world!",
  },
]
`;

exports[`Suggest Equality 1`] = `
Array [
  Object {
    "id": 20,
    "rating": undefined,
    "title": "[Foo] [bar]",
  },
]
`;

exports[`Suggest Joined words 1`] = `
Array [
  Object {
    "id": 20,
    "rating": undefined,
    "title": "[Foo] [bar]",
  },
]
`;

exports[`Suggest Prefix 1`] = `
Array [
  Object {
    "id": 20,
    "rating": undefined,
    "title": "Foo [ba]r",
  },
  Object {
    "id": 30,
    "rating": undefined,
    "title": "-[BA]ZZZ-",
  },
]
`;

exports[`Suggest Prio 1`] = `
Array [
  Object {
    "id": 30,
    "rating": 2,
    "title": "-BAZZZ-",
  },
  Object {
    "id": 20,
    "rating": 1,
    "title": "Foo bar",
  },
  Object {
    "id": 10,
    "rating": 0,
    "title": "Hello world!",
  },
]
`;

exports[`Suggest Render DIY 1`] = `
Array [
  Object {
    "label": "Foo <<ba>>r",
    "value": "20",
  },
  Object {
    "label": "-<<BA>>ZZZ-",
    "value": "30",
  },
]
`;

exports[`Suggest Render highlight helper 1`] = `
Array [
  "((Hel))lo world!",
]
`;

exports[`Suggest Typos 1`] = `
Array [
  Object {
    "id": 10,
    "rating": undefined,
    "title": "[Hello] world!",
  },
]
`;

exports[`Suggest Typos 2`] = `
Array [
  Object {
    "id": 10,
    "rating": undefined,
    "title": "[Hello] world!",
  },
]
`;
